#3: move custom unmarshaler, and use it for the config read; http: small fixes;

--- a/example.yaml
+++ b/example.yaml
@@ -84,7 +84,7 @@ groups:
                 eq: 200
               content:
                 type: JSON
-                JSON:
+                json:
                   - jsonpath: '$.datetime'
                     match: [ '(\d{4}-\d{2}-\d{2}T\d{2}:\d{2}:\d[1,3,5,7,9]\.\d+\+\d{2}:\d{2})' ]
 
@@ -107,7 +107,7 @@ groups:
                     eq: 200
                   content:
                     type: JSON
-                    JSON:
+                    json:
                       - jsonpath: '$.datetime'
                         match: [ '(\d{4}-\d{2}-\d{2}T\d{2}:\d{2}:\d[1,3,5,7,9]\.\d+\+\d{2}:\d{2})' ]
       - name: Masked retry
